--- a/lib/s3browser/views/bucket.haml
+++ b/lib/s3browser/views/bucket.haml
@@ -28,7 +28,9 @@
         %tbody
           -objects.each do |obj|
             %tr
-              %td= obj[:key]
+              %td
+                %a{ target: '_blank', href: obj[:url] }
+                  = obj[:key]
               %td= obj[:size]
               %td= obj[:content_type]
               %td= Time.at(obj[:last_modified]).strftime('%Y-%m-%d %H:%M:%S')
