--- a/lib/s3browser/views/bucket.haml
+++ b/lib/s3browser/views/bucket.haml
@@ -39,7 +39,7 @@
                   %img{ src: obj[:thumbnail][:url], width: obj[:thumbnail][:width]}
 
 - if settings.store.respond_to? :upload
-  %form{ enctype: 'multipart/form-data', method: 'post', action: '/upload' }
+  %form{ enctype: 'multipart/form-data', method: 'post', action: '/upload/' + bucket }
     #upload-modal.modal.fade{ tabindex: -1, role: 'dialog' }
       .modal-dialog
         .modal-content
