--- a/lib/s3browser/views/index.haml
+++ b/lib/s3browser/views/index.haml
@@ -9,4 +9,4 @@
       -buckets.each do |bucket|
         %tr
           %td
-            %a{ href: "/#{bucket}" }= bucket
+            %a{ href: url("/#{bucket}") }= bucket
